--- a/package.json
+++ b/package.json
@@ -1,27 +1,16 @@
 {
-  "name": "aurer-kirby",
-  "version": "0.0.1",
-  "description": "Personal website",
-  "main": "gulpfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Aurer",
-  "license": "ISC",
+  "name": "Aurer-kirby",
+  "description": "Peronal website built with Kirby",
+  "repository": "https://github.com/aurer/aurer-kirby",
+  "version": "0.1.0",
   "devDependencies": {
-    "gulp": "^3.6.2",
-    "gulp-autoprefixer": "0.0.7",
-    "gulp-cache": "^0.1.11",
-    "gulp-clean": "^0.3.0",
-    "gulp-concat": "^2.2.0",
-    "gulp-connect": "^2.0.5",
-    "gulp-imagemin": "^0.5.1",
-    "gulp-livereload": "^1.5.0",
-    "gulp-minify-css": "^0.3.4",
-    "gulp-notify": "^1.3.1",
-    "gulp-plumber": "^0.6.2",
-    "gulp-rev": "^0.4.0",
-    "gulp-sass": "^0.7.1",
-    "gulp-uglify": "^0.3.0"
+    "grunt": "~0.4.5",
+    "grunt-autoprefixer": "^0.8.2",
+    "grunt-browser-sync": "^1.3.2",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-imagemin": "^0.8.0",
+    "grunt-contrib-sass": "^0.7.4",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-svg2png": "^0.2.5"
   }
 }
