--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "grunt-browser-sync": "^1.3.2",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-imagemin": "^0.8.0",
-    "grunt-contrib-sass": "^0.7.4",
+    "grunt-contrib-less": "^1.0.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-svg2png": "^0.2.5"
   }
