--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "^0.8.2",
     "grunt-browser-sync": "^1.3.2",
-    "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-imagemin": "^0.8.0",
     "grunt-contrib-less": "^1.0.0",
+    "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-svg2png": "^0.2.5"
   }
