--- a/assets/package.json
+++ b/assets/package.json
@@ -8,13 +8,15 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^2.2.0",
-    "grunt-browser-sync": "^2.1.1",
-    "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-less": "^1.0.0",
+    "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-uglify": "^0.9.1",
+  },
+  "devDependencies": {
+    "grunt-browser-sync": "^2.1.1",
     "grunt-contrib-watch": "^0.6.1"
   }
 }
