--- a/assets/package.json
+++ b/assets/package.json
@@ -13,7 +13,7 @@
     "grunt-autoprefixer": "^2.2.0",
     "grunt-contrib-less": "^1.0.0",
     "grunt-contrib-imagemin": "^0.9.4",
-    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-uglify": "^0.9.1"
   },
   "devDependencies": {
     "grunt-browser-sync": "^2.1.1",
