--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^2.2.0",
-    "grunt-contrib-less": "^1.0.0",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-imagemin": "^0.9.4",
+    "grunt-contrib-less": "^1.0.0",
     "grunt-contrib-uglify": "^0.9.1"
   },
   "devDependencies": {
