--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "assetflow": "^0.2.8",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^2.2.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-less": "^1.0.0",
-    "grunt-contrib-uglify": "^0.9.1"
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-filerev": "^2.3.1"
   },
   "devDependencies": {
     "grunt-browser-sync": "^2.1.1",
