--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-less": "^1.0.0",
-    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-uglify": "^0.9.1"
   },
   "devDependencies": {
     "grunt-browser-sync": "^2.1.1",
