--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^2.2.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-less": "^1.0.0",
     "grunt-contrib-uglify": "^0.9.1",
-    "grunt-filerev": "^2.3.1"
+    "grunt-filerev": "^2.3.1",
+    "grunt-pleeease": "^1.3.2"
   },
   "devDependencies": {
     "grunt-browser-sync": "^2.1.1",
